--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -41,6 +41,9 @@ jobs:
       run: |
         dotnet new sln
         dotnet new web-extended
+        dotnet sln TestProject.sln add Dtos/TestProject.Dtos.csproj
+        dotnet sln TestProject.sln add Data/TestProject.Data.csproj
+        dotnet sln TestProject.sln add Web/TestProject.Web.csproj
         dotnet build
       working-directory: tmp/TestProject
 
