--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        path: repository
       
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
@@ -25,14 +27,16 @@ jobs:
     
     - name: Install dependencies
       run: dotnet restore
+      working-directory: repository
       env:
         NUGET_AUTH_TOKEN: ${{ github.token }}
       
     - name: Build
       run: dotnet build --configuration Release --no-restore
+      working-directory: repository
       
     - name: Install templates
-      run: dotnet new install ./src/content/NewTemplate
+      run: dotnet new install ./repository/src/content/NewTemplate
 
     - name: Create folder for test projects
       run: mkdir tmp && mkdir tmp/TestProject
@@ -49,14 +53,18 @@ jobs:
 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+      working-directory: repository
       
     - name: Pack
       run: dotnet pack --no-build --configuration Release
+      working-directory: repository
       
     - name: PushNuget
       run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.PUBLISH_TO_NUGET_ORG }} --skip-duplicate
+      working-directory: repository
       
     - name: PushGithub
       run: dotnet nuget push "**/*.nupkg" --no-symbols --skip-duplicate
+      working-directory: repository
       env:
         NUGET_AUTH_TOKEN: ${{ github.token }}
