--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -15,7 +15,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         path: repository
-      
+    
+    - name: Setup node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+    
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
