--- a/src/MintPlayer.AspNetCore.Template.Web.csproj.in
+++ b/src/MintPlayer.AspNetCore.Template.Web.csproj.in
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 		<OutputType>Exe</OutputType>
 		<IsPackable>false</IsPackable>
+		<SpaRoot>ClientApp\</SpaRoot>
 	</PropertyGroup>
 
 	<ItemGroup>
